--- a/myproject/products/templates/products/Type.html
+++ b/myproject/products/templates/products/Type.html
@@ -624,7 +624,7 @@
                     </div>
                      <div class="mb-3">
                         <label for="editCategoryName" class="form-label">Offer</label>
-                        <input type="number" class="form-control" id="editCategoryName" name="offer" value="{{ i.offer }}" required>
+                        <input type="number" class="form-control" id="editCategoryName" name="offer" value="{{ i.offer }}"  >
                     </div>
                     <div class="mb-3">
                         <label for="editStatus" class="form-label">Status</label>
