--- a/myproject/products/templates/products/products.html
+++ b/myproject/products/templates/products/products.html
@@ -713,10 +713,10 @@
                         <!-- Category Filter -->
                         <div class="filter-group mb-4">
                             <h5 class="text-primary">Categories</h5>
-                            <div class="form-check">
+                            {% comment %} <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="type" value="all" id="categoryAll" {% if 'all' in category_ids %}checked{% endif %}>
                                 <label class="form-check-label" for="categoryAll">All Categories</label>
-                            </div>
+                            </div> {% endcomment %}
                             {% for category in Type %}
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="type" value="{{ category.id }}" {% if category.id in category_ids %}checked{% endif %} id="category-{{ category.id }}">
